--- a/templates/submenu_borrow.tmpl
+++ b/templates/submenu_borrow.tmpl
@@ -21,6 +21,12 @@
       </a>
     </li>
 
+    <li id="menu_borrow_renewals">
+      <a href=/cgi-bin/lightning.cgi?rm=renewals>
+      Renewals
+      </a>
+    </li>
+
     <li id="menu_borrow_returns">
       <a href=/cgi-bin/lightning.cgi?rm=returns>
       Returns
