handle Spruce locations

--- a/templates/search/make_request.tmpl
+++ b/templates/search/make_request.tmpl
@@ -63,7 +63,12 @@
     <table>
       <tr><td>symbol</td><td>location</td><td>holding</td><td>callno</td></tr>
       <TMPL_LOOP name="sources">
-	<tr><td><TMPL_VAR name="symbol"></td><td><TMPL_VAR name="location"></td><td><TMPL_VAR name="holding"></td><td><TMPL_VAR name="callno"></td></tr>
+	<tr>
+	  <td><TMPL_VAR name="symbol"></td>
+	  <td><TMPL_VAR name="location"></td>
+	  <td><TMPL_VAR name="holding"></td>
+	  <td><TMPL_VAR name="callno"></td>
+	</tr>
       </TMPL_LOOP>
     </table>
     
