--- a/templates/search/checkins.tmpl
+++ b/templates/search/checkins.tmpl
@@ -3,7 +3,7 @@
 
 <link type="text/css" href="/css/maplin-theme/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
 <script type="text/javascript" src="/jquery-1.7.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 <script type="text/javascript" src="/menu-counters.js"></script>
 <script type="text/javascript" src="/checkins.js"></script>
 
