trailing comma caused Internet Explorer grief. sigh.

--- a/templates/myaccount/library-barcodes.tmpl
+++ b/templates/myaccount/library-barcodes.tmpl
@@ -33,7 +33,7 @@ $('document').ready(function(){
             { "mDataProp": "borrower", "sWidth": "5%" },
             { "mDataProp": "name", "sWidth": "15%" },
             { "mDataProp": "library", "sWidth": "50%" },
-            { "mDataProp": "barcode", "sWidth": "15%" },
+            { "mDataProp": "barcode", "sWidth": "15%" }
         ],
         "bAutoWidth": false
     });
