library name as tooltip on hover over library symbol

--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -65,7 +65,7 @@ $('document').ready(function() {
 	  <td><TMPL_VAR NAME="author"></td>
 	  <td><TMPL_VAR NAME="title"></td>
 	  <td><TMPL_VAR NAME="ts"></td>
-	  <td><TMPL_VAR NAME="from"></td>
+	  <td title="<TMPL_VAR NAME="library">"><TMPL_VAR NAME="from"></td>
 	  <td><TMPL_VAR NAME="msg_from"></td>
 	  <td><TMPL_VAR NAME="barcode"></td>
 	  <td><img src="data:image/png;base64,<TMPL_VAR NAME="barcode_image">"/></td>
