--- a/templates/search/respond.tmpl
+++ b/templates/search/respond.tmpl
@@ -49,6 +49,7 @@ $('document').ready(function(){
       <li>If your due date is the same for all (or most) requests you are filling, enter that as the "default due date".</li>
       <li>For each of the requests that you are filling, click the "Sent" button.</li>
       <li>For each remaining request - those that will be unfilled - click the "Unfilled" button and select a reason.</li>
+      <li>Hover over a library's symbol to see the full name of the library.</li>
     </ol>
   </div>
 
