css fix to include DataTables formatting (that is not included in theme)

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -3,6 +3,8 @@
 <head><title><TMPL_VAR name="pagetitle"></title>
 <link type="text/css" rel="stylesheet" href="/maplin3styles.2.0.css">
 <link type="text/css" rel="stylesheet" href="/feedstyles.1.1.css">
+<link type="text/css" rel="stylesheet" href="/DataTables-1.8.2/media/css/demo_page.css">
+<link type="text/css" rel="stylesheet" href="/DataTables-1.8.2/media/css/demo_table_jui.css">
 
 <script language="JavaScript">
 
@@ -33,7 +35,7 @@
 </script>
 -->
 </head>
-<body>
+<body class="example_alt_pagination">
 
 <DIV id="header">
   <div id="logo">
