cleaning up htdocs

--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html>
 <head><title><TMPL_VAR name="pagetitle"></title>
-<link type="text/css" rel="stylesheet" href="/maplin3styles.2.0.css">
+<!-- <link type="text/css" rel="stylesheet" href="/maplin3styles.2.0.css"> -->
+<link type="text/css" rel="stylesheet" href="/fILL.1.0.css">
 <link type="text/css" rel="stylesheet" href="/feedstyles.1.1.css">
-<link type="text/css" rel="stylesheet" href="/DataTables-1.8.2/media/css/demo_page.css">
-<link type="text/css" rel="stylesheet" href="/DataTables-1.8.2/media/css/demo_table_jui.css">
+<!-- <link type="text/css" rel="stylesheet" href="/DataTables-1.8.2/media/css/demo_page.css"> -->
+<!-- <link type="text/css" rel="stylesheet" href="/DataTables-1.8.2/media/css/demo_table_jui.css"> -->
 
 <script language="JavaScript">
 
