--- a/templates/search/lightning.tmpl
+++ b/templates/search/lightning.tmpl
@@ -6,9 +6,10 @@
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title><TMPL_VAR name="pagetitle"></title>
-  <link rel="stylesheet" href="/maplin3styles.2.0.css"></link>
-  <script type="text/javascript" src="/pz2.js"></script>
-  <script type="text/javascript" src="/maplin_client.js"></script>
+<!--  <link rel="stylesheet" href="/maplin3styles.2.0.css"></link>  -->
+  <link rel="stylesheet" href="/fILL.1.0.css"></link>
+  <script type="text/javascript" src="/js/pz2.js"></script>
+  <script type="text/javascript" src="/js/maplin_client.js"></script>
 <script language="JavaScript">
 
   function set_primary_tab(tab_id) {
