--- a/templates/myaccount/library-barcodes.tmpl
+++ b/templates/myaccount/library-barcodes.tmpl
@@ -2,11 +2,11 @@
 <TMPL_INCLUDE NAME="submenu_myaccount.tmpl">
 
 <link type="text/css" href="/css/maplin-theme/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
-<script type="text/javascript" src="/jquery-1.7.min.js"></script>
+<script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="/DataTables-1.8.2/media/js/jquery.dataTables.js"></script>
-<script type="text/javascript" src="/jquery.jeditable.js"></script>
-<script type="text/javascript" src="/library-barcodes.js"></script>
+<script type="text/javascript" src="/js/jquery.jeditable.js"></script>
+<script type="text/javascript" src="/js/library-barcodes.js"></script>
 
 
 <script type="text/javascript">
