--- a/templates/search/live-requests.tmpl
+++ b/templates/search/live-requests.tmpl
@@ -1,11 +1,10 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
 <link type="text/css" href="/css/maplin-theme/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
-<script type="text/javascript" src="/jquery-1.7.min.js"></script>
+<script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="/DataTables-1.8.2/media/js/jquery.dataTables.js"></script>
-
-<script type="text/javascript" src="/live-requests.js"></script>
+<script type="text/javascript" src="/js/live-requests.js"></script>
 
 <script type="text/javascript">
 
