--- a/templates/info/contacts.tmpl
+++ b/templates/info/contacts.tmpl
@@ -61,7 +61,7 @@ $('document').ready(function(){
       <h3>Library contact information</h3>
       <div>
 	<div class="dataTable_wrapper">
-	  <table id="datatable_contacts" width="100%" border="1">
+	  <table id="datatable_contacts" width="100%">
 	    <thead>
 	      <tr>
 		<th>library</th><th>name</th><th>email_address</th><th>mailing_address</th>
