--- a/templates/info/contacts.tmpl
+++ b/templates/info/contacts.tmpl
@@ -1,11 +1,6 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 <TMPL_INCLUDE NAME="submenu_info.tmpl">
 
-<link type="text/css" href="/css/maplin-theme/jquery-ui-1.8.16.custom.css" rel="stylesheet" />
-<script type="text/javascript" src="/js/jquery-1.7.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-<script type="text/javascript" charset="utf-8" src="/DataTables-1.8.2/media/js/jquery.dataTables.js"></script>
-
 <script type="text/javascript">
 set_secondary_tab("menu_info_contacts");
 
@@ -23,6 +18,17 @@ $('document').ready(function(){
 	"sDom": '<"H"Tfr>t<"F"ip>',
         "iDisplayLength": 10,
         "aLengthMenu": [[10, 25, 50, -1], [10, 25, 50, "All"]],
+	"oTableTools": {
+                "sSwfPath": "/DataTables-1.8.2/extras/TableTools/media/swf/copy_cvs_xls_pdf.swf",
+		"aButtons": [
+			"copy", "csv", "xls", "pdf", "print",
+			{
+				"sExtends":    "collection",
+				"sButtonText": "Save",
+				"aButtons":    [ "csv", "xls", "pdf" ]
+			}
+		]
+	},
         "aoColumns": [
             { "mDataProp": "library", "sWidth": "25%" },
             { "mDataProp": "name", "sWidth": "5%" },
