remove requesting library id from pull-list - not needed.

--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -60,7 +60,6 @@ $('document').ready(function() {
              { "mDataProp": "Title" },
              { "mDataProp": "Date/Time requested" },
              { "mDataProp": "Requested by" },
-             { "mDataProp": "Requested by (ID)" },
              { "mDataProp": "Library barcode" },
              { "mDataProp": "Scannable barcode" }
         ]
@@ -80,7 +79,7 @@ $('document').ready(function() {
     <h3>Pull list</h3>
     <table id="gradient-style">
       <thead>
-	<tr><th>Call #</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th><th>Requested by (ID)</th><th>Library barcode</th><th>Scanable barcode</th></tr>
+	<tr><th>Call #</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th><th>Library barcode</th><th>Scanable barcode</th></tr>
       </thead>
       <tfoot><tr><td colspan="8">You can print this and take it to the stacks.</td></tr></tfoot>
       <tbody>
@@ -91,7 +90,6 @@ $('document').ready(function() {
 	  <td><TMPL_VAR NAME="title"></td>
 	  <td><TMPL_VAR NAME="ts"></td>
 	  <td title="<TMPL_VAR NAME="library">"><TMPL_VAR NAME="from"></td>
-	  <td><TMPL_VAR NAME="msg_from"></td>
 	  <td><TMPL_VAR NAME="barcode"></td>
 	  <td><img src="data:image/png;base64,<TMPL_VAR NAME="barcode_image">"/></td>
 	</tr>
