column header clarification on pull-list barcode column, for clarification

--- a/templates/search/pull_list.tmpl
+++ b/templates/search/pull_list.tmpl
@@ -60,7 +60,7 @@ $('document').ready(function() {
              { "mDataProp": "Title" },
              { "mDataProp": "Date/Time requested" },
              { "mDataProp": "Requested by" },
-             { "mDataProp": "Library barcode" }
+             { "mDataProp": "Your barcode for the requesting library" }
         ]
   });
 
@@ -78,7 +78,7 @@ $('document').ready(function() {
     <h3>Pull list</h3>
     <table id="gradient-style">
       <thead>
-	<tr><th>Call #</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th><th>Library barcode</th></tr>
+	<tr><th>Call #</th><th>Author</th><th>Title</th><th>Date/Time requested</th><th>Requested by</th><th>Your barcode for the requesting library</th></tr>
       </thead>
       <tfoot><tr><td colspan="8">You can print this and take it to the stacks.</td></tr></tfoot>
       <tbody>
